--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/Project-1.png"
                 alt="Blog Site"
                 class="project-img"
               />
@@ -271,7 +271,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/Project-2.png"
                 alt="Weather App"
                 class="project-img"
               />
